--- a/seo-augmenter/frontend/package.json
+++ b/seo-augmenter/frontend/package.json
@@ -12,10 +12,10 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.9",
-    "vite": "^4.0.0"
+  "vite": "^4.0.0",           
+  "react": "^18.0.0",
+  "react-dom": "^18.0.0",
+  "tailwindcss": "^3.0.0"
+  
   }
 }
