--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,10 @@
 [build]
+  base = "seo-augmentor/frontend"  # 👈 Adjusted base directory
   command = "npm run build"
   publish = "dist"
+
+[dev]
+  command = "npm run dev"
+  port = 8888
+  targetPort = 5173
+  framework = "vite"
