--- a/seo-augmenter/frontend/package.json
+++ b/seo-augmenter/frontend/package.json
@@ -13,9 +13,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.7.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "tailwindcss": "^3.0.0",
+    "tailwindcss": "^3.4.17",
     "vite": "^4.0.0"
   }
 }
